--- a/css/globals.css
+++ b/css/globals.css
@@ -1,58 +1,70 @@
-*, *::after, *::before{
+*, *::after, *::before {
     padding: 0;
     margin: 0;
-    box-sizing: border-box; /*Регулирует размеры и отступы, т.е. позволяет браузеру правильно считывать логику (400px значение бокса + 20px отступ =
-    380px внутреннее содержание контента бокса и 20px отступа.*/
+    box-sizing: border-box;
 }
+
 h1, h2, h3, h4, h5, h6, p {
-    font-family: inherit; /*inherit нужен чтобы присвоить значение от родительского элемента, плюс это необходимо прописывать в начале каждого css*/
+    font-family: inherit;
 }
 
 button {
-    display: inline-block; /*display: inline-block нужен на линейных элементах, нужен чтобы аттрибуты css блочных элементов правильно работали на 
-    линейных элементов*/
+    display: inline-block;
 }
 
-/* Если не указать для input, textarea, button аттрибут font-family: inherit то они не примут стиль текста от body */
-
-a, a:hover{
-    text-decoration: none; /*Делает так чтобы после наведения не подчеркивалась ссылка (не появлялась нижняя полоса под ссылкой)*/
-    color: #000;/*Не позволяет менять цвет ссылки при наведения и после нажатия*/
-}
-
-img {
-    display: block; /*Преобразует тип img в Блочный элемент*/
-    width: 100%; /*Позволяет всегда брать значение от своего родителя то есть 100% ширины от родительского блока*/
-    height: auto;
-}
-
-.body{
+.body {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5;
 }
-.container{
+
+a, a:hover{
+    text-decoration: none;
+    color: #000;
+}
+
+img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.products {
+    margin-bottom: 60px;
+}
+
+.container {
     max-width: 1200px;
     margin: auto;
     text-align: center;
 }
 
-.section-header{
-    text-align: center;
-    padding: 20px;
-    margin-top: 30px;
+.products-header {
+    margin-top: 90px;
+    margin-bottom: 40px;
 }
 
-.section-header > * + * {
-    margin-top: 24px;
+.products-title-1 {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 42px;
+    font-weight: 700;
+    margin-bottom: 10px;
 }
 
-.product-wrapper {
-    margin-bottom: 60px;
+.products-subtitle {
+    color: #999999;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.products-list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     column-gap: 30px;
     row-gap: 40px;
-    justify-content: center;
+    list-style-type: none;
+    margin-bottom: 30px;
 }
 
 .product {
@@ -61,66 +73,73 @@ img {
     text-align: center;
 }
 
-.text {
-    margin-top: 10px;
-}
-
 .old-price {
-    color: gray;
-    text-decoration-line: line-through;
+    color: #999999;
+    margin-right: 5px;
 }
 
 .new-price {
     color: red;
-    margin: 0;
-    font-weight: 500    ;
+    font-weight: 700;
+}
+
+.product-title {
+    font-weight: 400;
+    font-size: 24px;
+    margin-top: 8px;
+    margin-bottom: 12px;
+}
+
+.button, .product-title, .footer-link {
+    font-family: 'Times New Roman', Times, serif;
+    color: #999999;
 }
 
 .button {
-    color: rgb(161, 159, 159);  
-    padding: 16px 28px;
-    border: 3px solid rgb(255, 177, 190);
-    margin-bottom: 24px;
+    background-color: white;
+    border: 1px solid #F72464;
+    border-radius: 5px;
+    padding: 16px 32px;
+    margin-bottom: 30px;
 }
 
 .button:hover {
-    scale: 1.1;
-    transition: 0.6;
+    cursor: pointer;
 }
 
 .footer {
-    background-color: black;
-    color: white;
+    background-color: #000;
     padding: 20px 40px;
-    text-align: center;
+    color: white
 }
 
-.footer-link{
-    color: white;
+.footer-link {
+    color: inherit;
     margin-right: 10px;
-    margin-bottom: 24px;
-}
-
-.footer-link:hover {
-    color: tan;
+    font-weight: 400;
+    font-size: 14px;
 }
 
 .footer-link:last-child {
     margin-right: 0;
 }
 
-.icons {
+.footer-link:hover {
+    color: yellow;
+}
+
+.footer-socials {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
 
-.icon-link {
+.social-link {
     margin: 24px 8px;
 }
 
-.icon-link img:hover {
+.social-link:hover{
     scale: 1.2;
     transition: 0.4s;
 }
