--- a/css/globals.css
+++ b/css/globals.css
@@ -73,6 +73,11 @@ img {
     text-align: center;
 }
 
+.product-image {
+    height: 330px;
+    overflow: hidden;
+}
+
 .old-price {
     color: #999999;
     margin-right: 5px;
